--- a/docs/references.bib
+++ b/docs/references.bib
@@ -14,3 +14,16 @@ volume = {111},
 year = {2014}
 }
 
+@article{Baldacchino2025,
+author = {Baldacchino, Francesca and Zheng, Whyjay and Wu, Kunpeng and Kapitsa, Vassiliy and Yegorov, Alexandr and Bolch, Tobias},
+doi = {10.1016/j.srs.2025.100266},
+issn = {26660172},
+journal = {Science of Remote Sensing},
+month = {dec},
+number = {July},
+pages = {100266},
+publisher = {Elsevier B.V.},
+title = {{Investigating seasonal velocity variations of selected glaciers in high mountain asia}},
+volume = {12},
+year = {2025}
+}
