--- a/_sources/handson/H4-Narrative.ipynb
+++ b/_sources/handson/H4-Narrative.ipynb
@@ -7,137 +7,90 @@
    "source": [
     "# Writing narrative science \n",
     "\n",
-    "<!-- **2023.04.18, 2023.04.25, 2023.05.02** -->\n",
-    "**2024.11.26, 2024.12.03, 2024.12.17**\n",
+    "This tutorial introduces Jupyter Book, a powerful tool for writing narrative science. I also used it to create the course webpages. The goals of this tutorial are to familiarize yourself with the MyST Markdown and to build and publish a Jupyter Book page using GitHub Pages. \n",
     "\n",
-    "This tutorial will provide an introduction to Jupyter Book, a powerful tool for writing narrative science. I also used it to create the course webpages.\n",
-    "\n",
-    "(narrative_science)=\n",
+    "<!-- (narrative_science)=\n",
     "## What is narrative science?\n",
     "\n",
     "Like other trendy words in data science, we don't have a common agreement about what it means by narrative science. Here we will use the following definition: narrative science is a concept of writing a piece that provides scientific and technical details in a research project with a narrative (i.e., context-based) structure so that readers can digest all the information in the text without cross-referencing. {cite}`Dahlstrom2014`\n",
     "\n",
-    "We will talk more about this during the lecture discussion.\n",
+    "We will talk more about this during the lecture discussion. -->\n",
     "\n",
-    "## Goals\n",
     "\n",
-    "1. Familiarize yourself with the MyST Markdown through some practices\n",
-    "2. Build and publish a Jupyter Book page on GitHub Pages \n",
+    "## 1 | [Jupyter Book](https://jupyterbook.org/)\n",
     "\n",
-    "## [Jupyter Book](https://jupyterbook.org/)\n",
+    "Jupyter Book coordinates several tools in the Python ecosystem for publishing science and technical writing pieces. Some of the most relevant tools include\n",
     "\n",
-    "<!-- ![Jupyter Book](https://jupyterbook.org/en/stable/_static/logo-wide.svg) -->\n",
+    "- [MyST Markdown](https://jupyterbook.org/content/myst.html): a derivative of Markdown, a [markup language](https://en.wikipedia.org/wiki/Markup_language) allowing users to create rich and formatted text for their documents using a simple text editor. It includes all Jupyter Notebook Markdown syntax and provides more formatting options than the latter.\n",
     "\n",
-    "The [Jupyter Book](https://jupyterbook.org/) package coordinates several tools in the Python ecosystem for publishing science and technical writing pieces. Some of the most relevant tools include\n",
+    "- [Sphinx](https://www.sphinx-doc.org/en/master/): a Python-based engine to read and parse markup-formatted source files and build documents in various formats, including HTML, PDF, and EPUB.\n",
     "\n",
-    "- [MyST Markdown](https://jupyterbook.org/content/myst.html): a derivative of Markdown, a [markup language](https://en.wikipedia.org/wiki/Markup_language) allowing users to create rich and formatted text for their documents using a simple text editor. \n",
+    "- Jupyter Book is also capable of parsing source files provided as Jupyter Notebooks, making it powerful to compile research workflows for publication.\n",
     "\n",
-    "- [Sphinx](https://www.sphinx-doc.org/en/master/): a Python-based engine to read and parse markup-formatted source files and build beautiful documents in various formats, including HTML, PDF, and EPUB.\n",
+    "### 🛠️ Make a Jupyter Book\n",
     "\n",
-    "- Jupyter Book is also capable of parse source files provided as Jupyter Notebooks, making it powerful to complie research workflows for publication.\n",
+    "Following the second hands-on session, we will further explore more markdowns here.\n",
     "\n",
-    "## Goal 1 procedure\n",
-    "\n",
-    "[Callysto Hub portal](https://hub.callysto.ca/)\n",
-    "\n",
-    "Go to the test repositry you created in the [previous session](H2-FAIRdata). Create a folder named `jupyter-book` and a new Jupyter Notebook file named `test.ipynb`. \n",
-    "\n",
-    "Open `test.ipynb` and change the type of the first cell from code to markdown. Copy and paste the following content into that cell:\n",
+    "🚩 **Task:** Log into [Callysto Hub](https://hub.callysto.ca/) (or other other working environment you prefer). Locate the repository you worked on during the previous class. Confirm that you have the following file structure:\n",
     "\n",
     "```\n",
-    "# This is a title\n",
-    "\n",
-    "## Section 1\n",
-    "\n",
-    "## Section 2\n",
-    "\n",
-    "### Section 2.1\n",
+    "./ \n",
+    "├ commit_test.ipynb\n",
+    "├ environment.yml\n",
+    "├ ipyleaflet.ipynb\n",
+    "└ scipy_test.ipynb\n",
     "```\n",
     "\n",
-    "Press `Ctrl+Enter` or `Shift+Enter` to render this cell as Markdown. On Jupyter Lab, the markdown cells are rendered using the [Jupyter Notebook Markdown](https://jupyterbook.org/en/stable/file-types/notebooks.html), an extension of CommonMark Markdown. \n",
+    "🚩 **Task:** Inside this repository folder, create a folder named `jbook`. Move all existing Jupyter Notebooks into this folder. Then create a new Jupyter Notebook file named `index.ipynb`. Open `index.ipynb` and change the type of the first cell to markdown. Copy and paste the following content into that cell:\n",
     "\n",
-    "MyST Markdown (which Jupyter Book uses to render the markdown content) is a [superset of CommonMark Markdown](https://jupyterbook.org/en/stable/file-types/markdown.html#extended-markdown-with-myst-markdown), meaning it fully supports Notebook-flavored markdown and provides more functionaility for narrative science.\n",
+    "````\n",
+    "# Narrative Science\n",
     "\n",
-    "Now I have a few tasks for you for expanding `index.ipynb`: let's see if you can figure this out by searching in the [Jupyter Book documentation](https://jupyterbook.org/en/stable/content/index.html)!\n",
+    "## Abstract\n",
     "\n",
-    "### Tasks\n",
+    "Narrative science is a concept of writing a piece that provides scientific and technical details in a research project with a narrative (i.e., context-based) structure so that readers can digest all the information in the text without cross-referencing.\n",
     "\n",
-    "1. Display [the following figure](https://whyjz.github.io/ncu-open-science/_static/csrsr_logo.png) in Section 1:\n",
+    "## Introduction\n",
     "\n",
-    "![CSRSR](https://whyjz.github.io/ncu-open-science/_static/csrsr_logo.png)\n",
+    "bla bla...\n",
     "\n",
-    "2. Display the following equation ([Stefan–Boltzmann law](https://en.wikipedia.org/wiki/Stefan%E2%80%93Boltzmann_law)) in Section 2:\n",
-    "\n",
-    "$\n",
-    "P = \\epsilon \\sigma AT^4\n",
-    "$\n",
-    "\n",
-    "3. Display this code snippet in Section 2.1 (do not use another cell!)\n",
-    "\n",
-    "```python\n",
-    "#### This sample code was auto-generated using Bing's ChatGPT AI (GPT-4).\n",
-    "\n",
-    "import numpy as np\n",
-    "from scipy import optimize\n",
-    "\n",
-    "# Define the function that we want to fit\n",
-    "def test_func(x, a, b):\n",
-    "    return a * np.sin(b * x)\n",
-    "\n",
-    "# Generate some data with noise to fit\n",
-    "x_data = np.linspace(0, 4 * np.pi, 100)\n",
-    "y_data = 3.0 * np.sin(1.5 * x_data) + 0.5 * np.random.normal(size=100)\n",
-    "\n",
-    "# Fit the data with the function\n",
-    "params, params_covariance = optimize.curve_fit(test_func, x_data, y_data, p0=[2, 2])\n",
-    "\n",
-    "# Print the results\n",
-    "print(params)\n",
+    "```{note}\n",
+    "Hey where's the content?\n",
     "```\n",
     "\n",
-    "4. Add text linking to Section 1. An example is [shown here](narrative_science) (linking to the beginning section of this document).\n",
+    "### Task 1\n",
     "\n",
-    "You might not be able to see some of the rendering on the JupyterLab/Notebook GUI; you'll need Jupyter Book to render the MyST markdown correctly. See the next section for details.\n",
+    "### Task 2\n",
     "\n",
-    "## Goal 2 procedure\n",
+    "### Task 3\n",
     "\n",
-    "Now let's install Jupyter Book on Callysto Hub:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce676124-75c8-42b8-b301-a6884e638346",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install jupyter-book"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d810662f-8bb5-4b12-8535-f91bed3b898d",
-   "metadata": {},
-   "source": [
-    "In the `jupyter-book` folder, create two files called `_toc.yml` and `_config.yml` with the following content:\n",
+    "````\n",
     "\n",
-    "**_toc.yml**\n",
+    "🚩 **Task:** Install Jupyter Book by\n",
+    "```\n",
+    "!pip install jupyter-book\n",
+    "```\n",
+    "\n",
+    "🚩 **Task:** In the `jbook` folder, create two files called `_toc.yml` and `_config.yml` with the following content:\n",
+    "\n",
+    "`_toc.yml`\n",
     "\n",
     "```\n",
     "format: jb-book\n",
     "root: index\n",
     "chapters:\n",
-    "# - file: markdown\n",
-    "# - file: notebooks\n",
+    "- file: ipyleaflet\n",
+    "- file: scipy_test\n",
+    "- file: commit_test\n",
     "```\n",
     "\n",
-    "**_config.yml**\n",
+    "`_config.yml`\n",
     "\n",
     "```\n",
     "# Book settings\n",
     "title                       : [a project name you like]\n",
     "author                      : [your name]\n",
-    "copyright                   : \"2023\"\n",
+    "copyright                   : \"2025\"\n",
     "logo                        : \n",
     "\n",
     "# Execution settings\n",
@@ -145,24 +98,116 @@
     "  execute_notebooks         : off  # Whether to execute notebooks at build time. Must be one of (\"auto\", \"force\", \"cache\", \"off\")\n",
     "```\n",
     "\n",
-    "Now you should be ready to run compile `index.ipynb` as a Book. Open the terminal, go to where these two files are located, and enter the following command:\n",
+    "🚩 **Task:** Confirm that you have the following file structure in the repository:\n",
     "\n",
-    "```bash\n",
-    "jupyter-book build .\n",
+    "```\n",
+    "./ \n",
+    "├ environment.yml\n",
+    "└ jbook\n",
+    "  ├ _config.yml\n",
+    "  ├ _toc.yml\n",
+    "  ├ commit_test.ipynb\n",
+    "  ├ index.ipynb\n",
+    "  ├ ipyleaflet.ipynb\n",
+    "  └ scipy_test.ipynb\n",
     "```\n",
     "\n",
-    "And this will generate an HTML site at `_build/html`. Check it out!\n",
+    "🚩 **Task:** Now you should be ready to compile all Notebooks as a Book. Open a terminal, go to the root folder of the repository, and execute the following command:\n",
     "\n",
-    "### Publish to GitHub Pages\n",
+    "```bash\n",
+    "jupyter-book build jbook\n",
+    "```\n",
     "\n",
-    "We can create an automatic workflow on GitHub to run Jupyter Book and publish the HTMLs to GitHub pages every time you push any new content.\n",
+    "After this, you should be able to find a new folder at `jbook/_build/html`. Check the `index.html` file by double-clicking it on the JupyterLab browser!\n",
     "\n",
-    "First commit and push all the changes above. On the Github repository site, make sure you have the GitHub workflow permission set to both read and write by going to Settings -> Actions -> Workflow permissions, as this figure shows:\n",
+    "❓ **Question:** How is the **Note block** formatted on the index.html page?\n",
+    "\n",
+    "### 🛠️ Experimenting with MyST Markdown\n",
+    "\n",
+    "You will need to complete the following tasks by compiling `jbook` each time you make some edits. Try to achieve what the tasks ask! Jupyter Book documentation has nicely written [pages about formatting with MyST Markdown](https://jupyterbook.org/en/stable/content/myst.html), which should be a good reference here.\n",
+    "\n",
+    "🚩 **Task:** Make a table in the `Task 1` section of the `index.ipynb` so that it can be rendered by Jupyter Book like this:\n",
+    "\n",
+    "```{list-table}\n",
+    ":header-rows: 1\n",
+    "\n",
+    "* - Week #\n",
+    "  - Topic\n",
+    "  - Hands-on\n",
+    "* - 1 \n",
+    "  - Course introduction\n",
+    "  - Hands-on 1\n",
+    "* - 2 \n",
+    "  - Lecture 1\n",
+    "  - Hands-on 1\n",
+    "```\n",
+    "\n",
+    "🚩 **Task:** In the `Task 2` section of the `index.ipynb`, put the CSRSR logo and make it Figure 1. Next, cross-reference it in a statement below. Like this:\n",
+    "\n",
+    "```{figure} ../csrsr_logo.png\n",
+    ":name: csrsr_logo\n",
+    "\n",
+    "The Logo of CSRSR.\n",
+    "```\n",
+    "\n",
+    "This statement says that {numref}`csrsr_logo` is the logo of CSRSR.\n",
+    "\n",
+    "🚩 **Task:** Create a text file called `references.bib` inside the `jbook` folder with the following content:\n",
+    "\n",
+    "```\n",
+    "@article{Baldacchino2025,\n",
+    "author = {Baldacchino, Francesca and Zheng, Whyjay and Wu, Kunpeng and Kapitsa, Vassiliy and Yegorov, Alexandr and Bolch, Tobias},\n",
+    "doi = {10.1016/j.srs.2025.100266},\n",
+    "issn = {26660172},\n",
+    "journal = {Science of Remote Sensing},\n",
+    "month = {dec},\n",
+    "number = {July},\n",
+    "pages = {100266},\n",
+    "publisher = {Elsevier B.V.},\n",
+    "title = {{Investigating seasonal velocity variations of selected glaciers in high mountain asia}},\n",
+    "volume = {12},\n",
+    "year = {2025}\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "Now, try to cite this reference in `Task 3` section of the `index.ipynb`, like this:\n",
+    "\n",
+    "Glaciers in the High Mountain Asia can speed up in the summer and slow down in the winter {cite:p}`Baldacchino2025`.\n",
+    "\n",
+    "❓ **Question:** Where does the bibliography show for the lask task?\n",
+    "\n",
+    "### 🛠️ Commit changes to GitHub\n",
+    "\n",
+    "🚩 **Task:** Create a text file called `.gitignore` in the root folder of the repository with the following content:\n",
+    "\n",
+    "```\n",
+    "# Jupyter Notebook\n",
+    ".ipynb_checkpoints\n",
+    "_build\n",
+    "```\n",
+    "\n",
+    "This prevents temporary or constantly changing files from being archived by Git (in this case, everything in the `_build` folder), which improves the clarity of the development history.\n",
+    "\n",
+    "🚩 **Task:** Commit and push every change to GitHub. Go to GitHub and confirm that everything but `_build` folder is uploaded. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d810662f-8bb5-4b12-8535-f91bed3b898d",
+   "metadata": {},
+   "source": [
+    "## 2 | GitHub Pages and GitHub Actions\n",
+    "\n",
+    "GitHub Pages is a web-hosting service provided by GitHub that allows you to display the HTML content of a repository. Here, we will utilize the GitHub Actions service to create an automated workflow, enabling GitHub to compile the book and publish the HTML to GitHub Pages every time new content is pushed.\n",
+    "\n",
+    "### 🛠️ Publish Jupyter Book to GitHub Pages\n",
+    "\n",
+    "🚩 **Task:** On GitHub, go to the repository site, make sure you have the GitHub workflow permission set to both read and write by going to Settings -> Actions -> General -> Workflow permissions, as this figure shows:\n",
     "\n",
     "![Github-scr4](figs/Github-scr5.png)\n",
     "\n",
-    "Now go back to the repository folder on Callysto Hub. Create a file named `build.yml` in \n",
-    "`.github/workflows` (you might need to create this folder too). Add the following content to `build.yml`:\n",
+    "🚩 **Task:** Go back to the repository folder on Callysto Hub. Create a file named `build.yml` in \n",
+    "`.github/workflows` (you may need to create this folder as well). Add the following content to `build.yml`:\n",
     "\n",
     "```\n",
     "name: build-docs\n",
@@ -189,18 +234,39 @@
     "    - name: Install dependencies\n",
     "      run: |\n",
     "        pip install jupyter-book\n",
+    "\n",
     "    - name: Build book\n",
     "      run: |\n",
-    "        jupyter book build ./jupyter-book\n",
+    "        jupyter book build ./jbook\n",
     "        \n",
     "    - name: Deploy to GitHub Pages\n",
     "      uses: peaceiris/actions-gh-pages@v3\n",
     "      with:\n",
     "        github_token: ${{ secrets.GITHUB_TOKEN }}\n",
-    "        publish_dir: ./jupyter-book/_build/html\n",
+    "        publish_dir: ./jbook/_build/html\n",
     "```\n",
     "\n",
-    "Commit and push the change above. On the GitHub repository page, go to settings -> Page. Make sure to the settings like this figure shows:\n",
+    "🚩 **Task:** Confirm that you have the following file structure in the repository:\n",
+    "\n",
+    "```\n",
+    "./\n",
+    "├ .github\n",
+    "│ └ workflows\n",
+    "│   └ build.yml\n",
+    "├ .gitignore\n",
+    "├ environment.yml\n",
+    "└ jbook\n",
+    "  ├ _config.yml\n",
+    "  ├ _toc.yml\n",
+    "  ├ commit_test.ipynb\n",
+    "  ├ csrsr_logo.png\n",
+    "  ├ index.ipynb\n",
+    "  ├ ipyleaflet.ipynb\n",
+    "  ├ references.bib\n",
+    "  └ scipy_test.ipynb\n",
+    "```\n",
+    "\n",
+    "🚩 **Task:** Commit and push all changes to GitHub. On the GitHub repository page, navigate to Settings -> Page. Make sure to set the settings like this figure shows:\n",
     "\n",
     "![Github-scr3](figs/Github-scr3.png)\n",
     "\n",
@@ -210,13 +276,11 @@
     "\n",
     "Now you should be able to see the Notebook published on your GitHub pages at https://[YOUR_ACCOUNT_NAME].github.io/[REPOSITORY_NAME]! \n",
     "\n",
+    "❓ **Question:** What [other settings](https://jupyterbook.org/en/stable/customize/config.html) available in `_config.yml` would you consider to edit?\n",
     "\n",
-    "## More resources\n",
+    "## 3 | More resources\n",
     "\n",
-    "This website is also built using Jupyter Book, and its source files are hosted at [here](https://github.com/whyjz/ncu-open-science). You can use it as a template for MyST formats and publishing notebooks.\n",
-    "\n",
-    "For how to configure Jupyter Book settings, see [this page](https://jupyterbook.org/en/stable/customize/config.html). (I always use this configuration template as a good start.)\n",
-    "\n",
+    "Again, this website is built using Jupyter Book, and you can find the source files at [here](https://github.com/whyjz/ncu-open-science). You can use it as a template for MyST formats and publishing notebooks.\n",
     "\n",
     "```{bibliography}\n",
     "```\n"
@@ -226,14 +290,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bb13eca6-eabb-4f5c-b3d7-47c3d157aef7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e70f6bb8-0425-4163-b113-906f22d146c5",
    "metadata": {},
    "outputs": [],
    "source": []
